--- a/example.ipynb
+++ b/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,6 +155,32 @@
    "outputs": [],
    "source": [
     "card.right()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tag': <Model: Tag>,\n",
+       " 'media': <Model: Media>,\n",
+       " 'model': <Model: Model>,\n",
+       " 'template': <Model: Template>,\n",
+       " 'deck': <Model: Deck>,\n",
+       " 'note': <Model: Note>,\n",
+       " 'card': <Model: Card>}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.tables"
    ]
   },
   {
