--- a/sample/database_viewer.ipynb
+++ b/sample/database_viewer.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from ankix import Ankix\n",
-    "db = Ankix('test.ankix')"
+    "db = Ankix('medical.ankix')"
    ]
   },
   {
@@ -18,11 +18,15 @@
     {
      "data": {
       "text/plain": [
-       "{'tag': <Model: Tag>,\n",
+       "{'settings': <Model: Settings>,\n",
+       " 'tag': <Model: Tag>,\n",
+       " 'media': <Model: Media>,\n",
        " 'model': <Model: Model>,\n",
        " 'template': <Model: Template>,\n",
        " 'deck': <Model: Deck>,\n",
        " 'note': <Model: Note>,\n",
+       " 'note_tag': <Model: NoteTagThrough>,\n",
+       " 'note_media': <Model: NoteMediaThrough>,\n",
        " 'card': <Model: Card>}"
       ]
      },
